[gd_scene load_steps=6 format=1]

[ext_resource path="res://scripts/moving_platform.gd" type="Script" id=1]
[ext_resource path="res://gfx/map objects/mp.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 22, 4 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 21.6818, 3.2295 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 75, 30 )

[node name="moving_platform" type="KinematicBody2D"]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 26.0044, 10.2652 )
shapes/0/trigger = true
collision/layers = 1
collision/mask = 1
one_way_collision/direction = Vector2( 0, 1 )
one_way_collision/max_depth = 8.0
collision/margin = 0.08
script/script = ExtResource( 1 )
Direction = Vector2( 0, 1 )
Travel_Dist = 0
Speed = 100

[node name="mp_Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 26.0044, 10.2652 )
shape = SubResource( 1 )
trigger = true
_update_shape_index = 0

[node name="player_on" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 26.0885, 3.05374 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_on"]

transform/pos = Vector2( 26.0885, 3.05374 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="player_near" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 28.5749, -52.1849 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_near"]

transform/pos = Vector2( 28.5749, -52.1849 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[connection signal="body_enter" from="player_on" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="player_on" to="." method="_on_Area2D_body_exit"]

[connection signal="body_enter" from="player_near" to="." method="_on_player_near_body_enter"]

[connection signal="body_exit" from="player_near" to="." method="_on_player_near_body_exit"]


